# bazel-ios-swiftui-template

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  xcodeproj.bazelrc
app/: BUILD.bazel
app/source/: ContentView.swift  MainApp.swift  file1.swift  file10.swift  file100.swift  file1000.swift  file10000.swift  file1001.swift  file1002.swift  file1003.swift  file1004.swift  file1005.swift  file1006.swift  file1007.swift  file1008.swift  file1009.swift  file101.swift  file1010.swift  file1011.swift  file1012.swift  file1013.swift  file1014.swift  file1015.swift  file1016.swift  file1017.swift  file1018.swift  file1019.swift  file102.swift  file1020.swift  file1021.swift  file1022.swift  file1023.swift  file1024.swift  file1025.swift  file1026.swift  file1027.swift  file1028.swift  file1029.swift  file103.swift  file1030.swift  (+9962 more)
